style.css
/* ... */
.header__description {
    width: 40%;    
}

.header__description--para {
    margin: 32px 0;

}

.header__email {
    width: 100%;
    max-width: 448px;
    height: 68px;
    position: relative;
    display: flex;
    justify-content: flex-end;
    align-items: center;
}

.header__email--btn {
    z-index: 2;
    margin: 8px;
    height: calc(100% - 16px);
    border-radius: 50px;
    width: 160px;
    border: none;
    background-color: #6415ff;
    color: white;
    font-weight: 700;
    font-size: 16px;
    transition: all 300ms ease;
}

.header__email--btn:hover {
    background-color: rgba(60, 13, 153);
}
.header__email--input {
    width: 100%;
    border-radius: 50px;
    border: 2px solid rgb(229, 231, 235);
    padding: 20px 192px 20px 32px;
    color: rgb(36, 62, 99);
    font-size: 16px;
    font-weight: 500;
    position: absolute;
    top: 0;
    bottom: 0;
    z-index: 1;
    transition: border-color 300ms;
}

.header__email--input::placeholder {
    font-weight: 500;
    color: rgb(158, 170, 189);
}

.header__email--input:hover {
    border-color: rgba(160, 174, 192);
}

.header__email--input:focus,
.header__email--input:active {
    outline: none;
    border-color: rgba(100, 21, 255);
}

.header__customers--title {
    margin-top: 80px;
    color:#a0aec0;
    font-size: 14px;
    font-weight: 600;
    letter-spacing: 0.6;
}
.header__customers {
    margin-top: 16px;
    padding-right: 256px;
    opacity: 0.4;
    width: 130%;
}

header {
    position:relative;
}

.header__img--wrapper {
    width: calc(100% - 40%);
}

.header__img {
    width: 100%;
    max-width: 768px;   
}


/* FEATURES */

#features {
    position: relative;
}

#features .row__narrow {
    display: flex;
    flex-direction: column;
    align-items: center;
}

#features .section__title {
    text-align:center;
}

#features .section__para {
    text-align: center;
    max-width: 576px;
}

.features {
    display: flex;
    flex-wrap: wrap;
    margin-top: 40px;
}

.feature {
    display: flex;
    flex-direction: column;
    width: calc(100% / 3);
}

.feature__row {
    display: flex;
    padding: 32px 24px;
    width: 100%;
    max-width: 1200px;
    flex-direction: column;
    align-items: center;
    text-align: center;
}

.feature__img--wrapper {
    display: flex;
    flex-wrap:wrap;
    padding: 20px;
    border-radius: 50px;
    border: 1px solid #e5e7eb;
    max-width: 70px;
    margin-left: 48px;
    margin-bottom: 24px;
    margin-top: 24px;
}

.feature__img {
    width: 24px;
    height: 24px;

}

.feature__text {
    margin-top: 8px;
    margin-left: 16px;
    justify-content: center;
}


.feature__para {
    margin-top: 16px;
    font-size: 16px;
    max-width: calc(600px / 3);
    color: rgb(124, 139, 161);
    line-height: 2;
    font-weight: 500;
}


.row__narrow {
    width: 100%;
    max-width: 1200px;
    margin: 0 auto;
}

/*QUALITY*/

#quality .row {
    display:flex;
    justify-content: space-between;
    align-items: center;
}
#quality .section__title{
    line-height:1.25;
}

#quality .btn{
    margin-top: 32px;
}

.quality__description {
    max-width:576px;
    margin-right: 64px;
    width: 50%
}

.quality__img--wrapper{
    width: 50%;
    border-radius: 4px;
    border: 1px solid rgb(229, 231, 235);
    position:relative;
    margin: 0 56px;
    z-index: 2;
    display: flex;
}

.quality__grid {
    transform: translateX(50%) translateY(50%) scaleX(1) ScaleY(1);
    width: 80px;
    height: 80px;
    position: absolute;
    right: 0px;
    bottom: 0px;
    fill: rgb(100, 21, 255);
    --tw-text-opacity:1;
    z-index: 0;
    display:block;
}

.quality__img {
    z-index: 1;
}

/*STEPS*/

#steps .row {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.steps__img--wrapper {
    display: flex;
    position:relative;
    width: 50%;
}

.steps__description {
    width: 50%;
    padding: 32px 0;
    padding-left: 16px;
    display: flex;
    flex-direction:column;
    margin-left: 64px;
    max-width: 640px;
}

.step {
    display: flex;
    align-items: flex-start;
    margin-top: 18px;
}

.step__number {
    color: #cbd5e0;
    font-size: 36px;
    font-weight: 600;
    line-height:1;
    padding-right: 24px;
}
.step__title {
    color: #243e63;
    font-size: 20px;
    font-weight: 600;
    line-height: 1;
}

.step__para {
    color: #718096;
    font-size: 14px;
    margin-top: 12px;
    font-weight: 500;
    line-height: 2;
    max-width: 316;
}

/*VALUES*/

#values .row {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

#values .section__title {
    margin-top: 16px;
    margin-bottom: 32px;
}

#values .btn {
    margin-top: 48px;
}

.value {
    margin-top: 2rem;
    margin-right: 2rem;
    align-items:flex-start;
    display:flex;
    flex-direction:column;
}

.values__description {
    width: 50%;
    padding: 32px 64px 32px 0;
}

.values__img {
    width:50%;
}
.value__img {
    width: 20px;
    height: 20px;
}

.values__list {
    margin-left:0px;
    margin-right: 0px;
    display: flex;
    flex-direction: row;
}

.value:nth-of-type(1) {
    margin-top:32px;
}

.value:nth-of-type(2) {
    margin-top:32px;
}

.value-title {
    display: flex;
    align-items: center;
}

.value:nth-child(1) .value__img--wrapper {
    background-color: #9ae6b4;
}

.value:nth-child(2) .value__img--wrapper {
    background-color: #feb2b2;
}

.value__img--wrapper {
    border-radius: 50px;
    display: flex;
    justify-content: center;
    align-items: center;
    width: 36px;
    height: 36px;
    border: 1px solid #e5e7eb;
}

.value__name {
    margin-left: 12px;
    font-size: 20px;
    font-weight: bold;
    color: #243e63;
}

.value__para {
    margin-top: 16px;
    line-height: 1.625;
    color: #718096;
}

/*PRICING*/

.pricing__description {
    text-align:center;
}

#pricing .row {
    display: flex;
    flex-direction: column;
    align-items: center;
}
/* ... */

